--- a/mocks/All.test.html
+++ b/mocks/All.test.html
@@ -4,8 +4,8 @@
 		<title>Fake tests</title>
 		
 		<script src="jquery-1.7.2.min.js"></script>
-		<link rel="stylesheet" href="qunit.css" type="text/css" media="screen" />
-		<script type="text/javascript" src="qunit.js"></script>
+		<link rel="stylesheet" href="../deps/qunit/qunit/qunit.css" type="text/css" media="screen" />
+		<script type="text/javascript" src="../deps/qunit/qunit/qunit.js"></script>
 		
 		<!-- codes here -->
 		<script type="text/javascript" src="mock.js"></script>
