--- a/mocks/All.test.html
+++ b/mocks/All.test.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Fake tests</title>
 		
-		<script src="jquery-1.7.2.min.js"></script>
+		<script src="../deps/jquery-1.7.2.min.js"></script>
 		<link rel="stylesheet" href="../deps/qunit/qunit/qunit.css" type="text/css" media="screen" />
 		<script type="text/javascript" src="../deps/qunit/qunit/qunit.js"></script>
 		
@@ -23,6 +23,12 @@
 		</h2>
 		<ol id="qunit-tests">
 		</ol>
-		<div id="qunit-fixture">test markup, will be hidden</div>
+		<div id="qunit-fixture">
+		    <div id="wrapper">
+		        <p>paragraph 1</p>
+		        <p>paragraph 2</p>
+		        <span>some text</span>
+		    </div>
+		</div>
 	</body>	
 </html>
