--- a/All.test.html
+++ b/All.test.html
@@ -3,15 +3,15 @@
 	<head>
 		<title>Fake tests</title>
 		
-		<script src="../deps/jquery-1.7.2.min.js"></script>
-		<link rel="stylesheet" href="../deps/qunit/qunit/qunit.css" type="text/css" media="screen" />
-		<script type="text/javascript" src="../deps/qunit/qunit/qunit.js"></script>
+		<script src="./deps/jquery-1.7.2.min.js"></script>
+		<link rel="stylesheet" href="./deps/qunit/qunit/qunit.css" type="text/css" media="screen" />
+		<script type="text/javascript" src="./deps/qunit/qunit/qunit.js"></script>
 		
 		<!-- codes here -->
-		<script type="text/javascript" src="mock.js"></script>
+		<script type="text/javascript" src="./mocks/mock.js"></script>
 		
 		<!-- tests here -->
-		<script type="text/javascript" src="../t/fake.test.js"></script>
+		<script type="text/javascript" src="./t/fake.test.js"></script>
 	</head>
 	<body>
 		<h1 id="qunit-header">QUnit example</h1>
