WIP, localStorage enabled for LocalCache testing, cleanup

--- a/All.test.html
+++ b/All.test.html
@@ -8,13 +8,17 @@
 		<script type="text/javascript" src="./deps/qunit/qunit/qunit.js"></script>
 		
 		<!-- codes here -->
-		<script type="text/javascript" src="./mocks/mock.js"></script>
+        <script type="text/javascript" src="./mocks/mock.js"></script>
+        <script type="text/javascript" src="../LocalCache/lib/Storage.js"></script>
+        <script type="text/javascript" src="../LocalCache/lib/Cache.js"></script>
 		
 		<!-- tests here -->
-		<script type="text/javascript" src="./t/fake.test.js"></script>
+		<script type="text/javascript" src="./t/mock.test.js"></script>
+		<script type="text/javascript" src="../LocalCache/t/Storage.test.js"></script>
+		<script type="text/javascript" src="../LocalCache/t/Cache.test.js"></script>
 	</head>
 	<body>
-		<h1 id="qunit-header">QUnit example</h1>
+		<h1 id="qunit-header">Fake tests</h1>
 		<h2 id="qunit-banner">
 		</h2>
 		<div id="qunit-testrunner-toolbar">
